examples/sample-product-chart/chart-test/reports/dist/run-bats-f17-3-orphan-75290/labels-on/artifacts/manifests/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-03T22:16:25Z"
    generation: 1
    labels:
      app: sample
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "475"
    uid: aed5ba04-fee3-41b0-afc3-f5d2be69300e
  spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - backend:
            service:
              name: sample
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
